--- a/derek-barker-project1/css/master.css
+++ b/derek-barker-project1/css/master.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("images/carnation.png");
+	background-image: url("derek-barker-project1\images\carnation.png");
 background-position: top;
 background-size:  cover;
 background-attachment: fixed;
